style.css
body {
    background-color: #1B1B1B;
    margin: 0;
    padding: 0;
    font-family: "Montserrat", sans-serif;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 2% 6%; 
}

.header{
    min-height: 30vh;
    width: 100%;
}

.name {     
    color: #fff;
    text-decoration: none;
    font-size: 18px;
    font-family: "Montserrat", sans-serif;
    font-weight: 800;
    font-style: normal;
}

nav{
    display: flex;
    padding: 2% 6%;
    justify-content: space-between;
    align-items: center;
}

nav img{
    width: 150px;
}
.nav-links{
    flex: 1;
    text-align: right;
}
.nav-links ul li{
    list-style: none;
    display: inline-block;
    padding: 8px 12px;
    position: relative;
}

.nav-links ul li a{
    color: #fff;
    text-decoration: none;
    font-size: 13px;
    font-family: "Montserrat", sans-serif;
    font-weight: 800;
    font-style: normal;
}

.nav-links ul li::after{
    content:'';
    width: 0%;
    height:2px;
    background: #ACFDB0;
    display: block;
    margin: auto;
    transition:0.5s;
}

.nav-links ul li:hover::after{
    width: 100%;
}

.text-box{
    width: 90%;
    color:#fff;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%);
    text-align: center;
}

nav .fa{
    display: none;
}

/* BOXES AND CONTAINERS */
.container{
    display:block;
    width: 100%;
}

/* BUTTONS */

.readmore-btn {
    width: fit-contentd;
    height: 55px;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
    background-color: #ACFDB0;
    border: none;
    border-radius: 10px;
    padding: 0px 15px;
    gap: 0px;
    transition: all 0.4s;
  }
  .book-wrapper {
    display: flex;
    align-items: center;
    justify-content: flex-end;
    position: relative;
    width: 45px;
    height: 100%;
  }
  .book-wrapper .book-page {
    width: 50%;
    height: auto;
    position: absolute;
  }
  .readmore-btn:hover .book-page {
    animation: paging 0.4s linear infinite;
    transform-origin: left;
  }
  .readmore-btn:hover {
    background-color: #d4d3d7;
  }
  @keyframes paging {
    0% {
      transform: rotateY(0deg) skewY(0deg);
    }
    50% {
      transform: rotateY(90deg) skewY(-20deg);
    }
    100% {
      transform: rotateY(180deg) skewY(0deg);
    }
  }
  .text {
    width: 105px;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    font-weight: 600;
    font-size: 15px;
    color: rgb(0, 0, 0);
  }

/* EFFECTS */

.icons::before:hover {
    color: #ACFDB0;
}

/* TEXT BOXES AND HEADERS */


h1{
    font-size: 4.6vm;
    font-weight: 800;
    color: #fff;
    font-family: "Montserrat", sans-serif;
}
p{
    padding: 10px;
    color: #fff;
    font-size: 1.5rem;
    font-weight: 300;
    letter-spacing: 0;
    font-style:normal;
    text-decoration: none;
    font-family: "Montserrat", sans-serif;
    margin-bottom: .0938066507em;
    line-height: 1.5;
}


/* WELCOME PAGE */

.welcome{
    padding-left: 100px;
    padding-bottom: 100px;
    display: flex;
    margin: auto;
}
.welcomeTitle{
    padding-top: 100px;
    color: #fff;
    font-size: 6rem;
    font-weight: 700;
    letter-spacing: 0;
    font-style:normal;
    transform:scaleY(0.85) ;
    text-decoration: none;
    font-family: "Montserrat", sans-serif;
    -webkit-font-smoothing: antialiased;
    margin-bottom: .0938066507em;
    line-height: .9380665066;
}
.welcomeRole{
    margin-top: 0px;
    margin-left: 75px;
    color: #ACFDB0;
    font-size: 3vh;
    font-weight: 700;
    transform:scaleY(0.85) ;
    letter-spacing: 0;
    font-style: normal;
    text-decoration: none;
    font-family: "Montserrat", sans-serif;
}

.welcome .image{
    margin:auto;
}

/* PROJECTS */
.projects{
    margin:auto;
}
.projects .display{
    display:flex;
    margin: auto;
    padding-top: 100px;
}
.projects .rightcolumn{
    float: right;
    width: 60%;
    padding: 50px;
}
.projects .leftcolumn{
    float: left;
    width: 25%;
    padding: 50px;
}
.projects .title{
    text-align: center;
    color: #fff;
    font-size: 6rem;
    font-weight: 10;
    letter-spacing: 0;
    font-style:normal;
    text-decoration: none;
    font-family: "Montserrat", sans-serif;
    -webkit-font-smoothing: antialiased;
    margin-bottom: .0938066507em;
    line-height: .9380665066;
    transform:scaleY(0.95) ;
}
.projects .showcase{
    display: flex;
    border-radius: 25px;
    background: #1B1B1B;
    box-shadow:  16px 16px 32px #171717,
                -16px -16px 32px #1f1f1f;
    padding: 20px;
    margin-bottom:100px ;
    width: 1000px;
    height: 200px;
}

/* SKILLS PAGE */

.skills{
    margin:auto;
    margin-bottom: 125px;
}

.skills .display{
    display:flex;
    margin: auto;
    padding-top: 100px;
}

.skills .title{
    text-align: center;
    color: #fff;
    font-size: 6rem;
    font-weight: 10;
    letter-spacing: 0;
    font-style:normal;
    text-decoration: none;
    font-family: "Montserrat", sans-serif;
    -webkit-font-smoothing: antialiased;
    margin-bottom: .0938066507em;
    line-height: .9380665066;
    transform:scaleY(0.95) ;
}

.skills .rightcolumn{
    float: right;
    width: 50%;
    padding: 50px;
}

.skills .image{
    margin:auto;
}

.skills .icons{
    display: ruby;
    list-style-type: none;
    color: #868e96;
}
.skills .icons .fa-brands{
    display: grid;
    margin: 10px;
    font-size: 83px;
    cursor: pointer;
}

.skills .icons .names{
    text-align: center;
    color: #fff;
    font-size: 1rem;
    font-weight: 700;
    letter-spacing: 0;
    font-style:normal;
    text-decoration: none;
    font-family: "Montserrat", sans-serif;
    -webkit-font-smoothing: antialiased;
    margin-bottom: .0938066507em;
    line-height: .9380665066;
    transform:scaleY(0.95) ;
}

.skills .description{
    display:block;
    margin: auto;
    padding: 10%;
    text-align: left;
    color: #fff;
    font-size: 1.5rem;
    font-weight: 300;
    letter-spacing: 0;
    font-style:normal;
    text-decoration: none;
    font-family: "Montserrat", sans-serif;
    -webkit-font-smoothing: antialiased;
    margin-bottom: .0938066507em;
    line-height: 1.5;
    transform:scaleY(0.95) ;
}

/* FOOTER SECTION */


.footer{
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 2% 6%;
/* 
    justify-content: space-between;
    align-items: center; */
}

.footer .text{
    font-size: 12px;
    text-align: center;
    line-height: normal;
    color: #fff;
}

.footer img{
    width: 150px;
}
.footer .contacts{
    display: flex;
    padding: 10px;
}
.footer .icons{
    padding: 10px;
    list-style-type: none;
    a:link { text-decoration: none; }
    a:visited { text-decoration: none; }
    a:hover { text-decoration: none; }
    a:active { text-decoration: none; }
}
.footer .icons .fa-brands{
    display: contents;
    color: #fff;
    margin: 10px;
    font-size: 32px;
    cursor: pointer;
}

.footer .icons .fa-solid{
    display: contents;
    color: #fff;
    margin: 10px;
    font-size: 34px;
    cursor: pointer;
}

/* NEEDS WORKING ON [changes the view for phone users]*/

@media(max-width: 700px){

    body{
        display: flex;
        align-items: unset;
        text-align: center;
        overflow-x: hidden;
    }

    .nav-links ul li{
        display: block;
    }
    .nav-links{
        position:absolute;
        background: #ACFDB0;
        height: 100vh;
        width: 200px;
        top:0;
        right: -600px;
        text-align: left;
        z-index: 2;
    }
    nav .fa{
        display: block;
        color: #1B1B1B;
        margin: 10px;
        font-size: 22px;
        cursor: pointer;
    }
    .nav-links ul{
        padding: 30px;
        background: #ACFDB0;
    }
    .nav-links ul li a{
        color: #1B1B1B;
    }
    
    .header{
        display: block;
    }

    .welcome{
        display: block;
        align-content: center;
        text-align: center;
        padding-left: 0px;
        margin: 0;
    }
    .welcomeTitle{
        font-size: 46px;
    }
    .welcomeRole{
        font-size: 24px;
        margin-left: 0px;
    }
    .welcome .image{
        width: 350px;
    }

    .projects .display{
        display: block;
        align-content: center;
        text-align: center;
        padding-left: 0px;
        margin: 0;
    }
    .projects .leftcolumn{
        float: none;
        width: 100%;
        padding: 0px;
    }
    .projects .rightcolumn{
        float: none;
        width: 100%;
        padding: 0px;
        justify-content: center;
    }
    .projects .title{
        font-size: 46px;
    }

    .projects .showcase{
        display: block;
        margin-bottom: 100px;
        width: 300px;
        height: auto;
    }

    .projects .image{
        width: 300px;
    }

    .skills .title{
        font-size: 46px;
    }

    .skills .display{
        display: block;
        align-content: center;
        text-align: center;
        padding-left: 0px;
        margin: 0;
    }
    .skills .leftcolumn{
        float: none;
        width: 100%;
        padding: 0px;
    }
    .skills .rightcolumn{
        float: none;
        width: 100%;
        padding: 0px;
        justify-content: center;
    }

    .skills .image{
        width: 300px;
    }
    
}

